--- a/sass/ncb.scss
+++ b/sass/ncb.scss
@@ -6,6 +6,7 @@
 @import "callouts";
 @import "circles";
 @import "sidebar";
+@import "login";
 
 /* Things with only new colors */
 @import "buttons";
