--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,40 +1,78 @@
 $all-colors : (
-    'primary' : #007bff,
-    'secondary' : #6c757d,
-    'success' : #28a745,
-    'info' : #17a2b8,
-    'warning': #ffc107,
-    'danger': #dc3545,
-    'light' : #f8f9fa,
-    'dark' : #343a40,
-    'magic' : #ae42bd,
-    'juice' : #fd9800,
-    'ocean' : #00cca3,
-    'cake' : #ffb4bf
+    'primary' : #0D6EFD,
+    'secondary' : #6C757D,
+    'success' :#198754,
+    'info' :#0DCAF0,
+    'warning':#FFC107,
+    'danger': #DC3545,
+    'white' : #FFFFFF,
+    'light' : #F8F9Fa,
+    'dark' : #212529,
+    'magic' : #AE42BD,
+    'juice' : #FD9800,
+    'ocean' : #00CCA3,
+    'cake' : #FFB4BF,
+    'brick' : #800040,
+    'blood' : #CC0000,
+    'mustard' : #D69D30,
+    'militar' : #F0E68C,
+    'lapislazuli' : #002FA7,
+    'grass' : #78D64B,
+    'leaf' : #44883E,
+    'coral' : #FF6F61,
+    'love' : #E5097F,
+    'clay' : #E8C39E,
+    'chocolate' : #8B4513,
+    'elegant' : #000000,
 );
 
 $new-colors : (
-    'magic' : #ae42bd,
-    'juice' : #fd9800,
-    'ocean' : #00cca3,
-    'cake' : #ffb4bf
+    'magic' : #AE42BD,
+    'juice' : #FD9800,
+    'ocean' : #00CCA3,
+    'cake' : #FFB4BF,
+    'brick' : #800040,
+    'blood' : #CC0000,
+    'mustard' : #D69D30,
+    'militar' : #F0E68C,
+    'lapislazuli' : #002FA7,
+    'grass' : #78D64B,   
+    'leaf' : #44883E,
+    'coral' : #FF6F61,
+    'love' : #E5097F,
+    'clay' : #E8C39E,
+    'chocolate' : #8B4513,
+    'elegant' : #000000,
 );
 
-$contrast-light : #fff;
+$contrast-light : #FFFFFF;
 $contrast-dark : #212529;
 $contrasts : (
     'primary' : $contrast-light,
     'secondary' : $contrast-light,
     'success' : $contrast-light,
-    'info' : $contrast-light,
+    'info' : $contrast-dark,
     'warning' : $contrast-dark,
     'danger' : $contrast-light,
+    'white' : $contrast-dark,
     'light' : $contrast-dark,
     'dark' : $contrast-light,
     'magic' : $contrast-light,
     'juice' : $contrast-light,
     'ocean' : $contrast-light,
-    'cake' : $contrast-dark
+    'cake' : $contrast-dark,
+    'brick' : $contrast-light,
+    'blood' : $contrast-light,
+    'mustard' : $contrast-light,
+    'militar' : $contrast-dark,
+    'lapislazuli' : $contrast-light,
+    'grass' : $contrast-dark,   
+    'leaf' : $contrast-light,
+    'coral' : $contrast-dark,
+    'love' : $contrast-light,
+    'clay' : $contrast-dark,
+    'chocolate' : $contrast-light,
+    'elegant' : $contrast-light,
 );
 
 $centerpoints : (
